# media-downloader

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_POST_CREATE.md  mkdocs.yml  nokeys.env  pyproject.toml  render.yaml
.github/: copilot-instructions.md
.github/agents/: dev-implementation-agent.md  dev-prototype-agent.md  docs-agent.md  draft-to-plan.agent.md  meta-agent.md  test-agent.md
.github/prompts/: plan-staticFolRelocation.prompt.md
docs/: contributing.md  getting-started.md  index.md
docs/guides/: env_loading.md  params_config.md  webapp_setup.md
scratch_space/feature_sample/: 01_sample.ipynb
scratch_space/media_downloader_sample/: 01_params.ipynb
scratch_space/usage_sample/: 01_via_endpoint.ipynb  02_via_library.ipynb
scratch_space/vibes/: 01-post-rename-cleanup.md
src/media_downloader/: __init__.py
src/media_downloader/config/: downloader_config.py  sample_config.py  service_config.py
src/media_downloader/core/: __init__.py  base.py  detector.py  metadata.py  models.py  router.py
src/media_downloader/core/providers/: __init__.py  instagram.py  web_recipe.py  yt_dlp.py
src/media_downloader/db/: __init__.py  models.py  service.py
src/media_downloader/metaclasses/: __init__.py
src/media_downloader/params/: downloader_params.py  load_env.py  media_downloader_params.py  media_downloader_paths.py  sample_params.py
src/media_downloader/params/webapp/: __init__.py  webapp_params.py
src/media_downloader/post_processing/: __init__.py  audio_extractor.py  base.py  transcription.py
src/media_downloader/storage/: __init__.py  media_storage.py
src/media_downloader/webapp/: __init__.py  app.py  lifespan.py  main.py  router_builder.py  schemas.py  worker.py
src/media_downloader/webapp/routers/: __init__.py  queue_router.py  sync_router.py
tests/: __init__.py  conftest.py
tests/config/: test_downloader_config.py  test_env_vars.py  test_sample_config.py
tests/core/: test_detector.py  test_metadata.py  test_models.py  test_router.py
tests/core/providers/: __init__.py
tests/data_models/: test_basemodel_kwargs.py
tests/db/: test_service.py
tests/metaclasses/: test_singleton.py
tests/params/: test_media_downloader_params.py  test_media_downloader_paths.py  test_sample_params.py
tests/post_processing/: __init__.py  test_audio_extractor.py
tests/storage/: test_media_storage.py
tests/webapp/: conftest.py
