[project]
name = "media-downloader"
version = "0.1.2"
description = "Self-hosted media downloading service for Instagram, YouTube/TikTok, and web recipes"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
instagram = ["instaloader>=4.14"]
video = ["yt-dlp>=2024.1.0"]
recipe = ["recipe-scrapers>=14.0", "trafilatura>=1.8"]
stt-local = [
    "llm-core[whisper] @ git+https://github.com/Pitrified/llm-core@v0.2.1",
    "pydub>=0.25",
]
stt-local-fast = [
    "llm-core[faster-whisper] @ git+https://github.com/Pitrified/llm-core@v0.2.1",
    "pydub>=0.25",
]
stt-api = [
    "llm-core[openai] @ git+https://github.com/Pitrified/llm-core@v0.2.1",
    "pydub>=0.25",
]
llm-core-base = [
    "llm-core @ git+https://github.com/Pitrified/llm-core@v0.2.1",
]
webapp = [
    "fastapi-tools @ git+https://github.com/Pitrified/fastapi-tools@v0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]
box = [
    "media-downloader[instagram,video,recipe,stt-local-fast,webapp]",
]
all = [
    "media-downloader[instagram,video,recipe,stt-local,webapp]",
]

[project.urls]
Repository = "https://github.com/Pitrified/media-downloader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/media_downloader"]

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.9.6",
    "pyright[nodejs]>=1.1.407",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-api-autonav>=0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
